<resources>
    <string name="app_name">Tamagotchi</string>

    <string name="food">Food</string>
    <string name="pills">Pills</string>
    <string name="games">Games</string>
    <string name="clean">Shower</string>
    <string name="home">Home</string>
    <string name="make_your_choice">Make your choice</string>
    <string name="scissors">scissors</string>
    <string name="rock">rock</string>
    <string name="paper">paper</string>
    <string name="choice">choice</string>
    <string name="happy_animation">Happy animation</string>
    <string name="tamagotchi_is_happy">Tamagotchi is happy</string>
    <string name="tamagotchi_is_hungry">Tamagotchi is hungry</string>
    <string name="fatigue">Fatigue</string>
    <string name="pills_button">Pills button</string>
    <string name="heal_your_tamagotchi">Heal your Tamagotchi</string>
    <string name="login"><u>Login</u></string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="vegetable">Vegetable</string>
    <string name="cupcake">Cupcake</string>
    <string name="burger">Burger</string>
    <string name="fruits">Fruits</string>
    <string name="pasta">Pasta</string>
    <string name="sushi">Sushi</string>
    <string name="water">Water</string>
    <string name="soda">Soda</string>
    <string name="chicken">Chicken</string>
    <string name="cheese">Cheese</string>
    <string name="bread">Bread</string>
    <string name="milk">Milk</string>
    <string name="your_choice">Your choice</string>
    <string name="next_to_the_right">Next to the right</string>
    <string name="right_arrow">Right arrow</string>
    <string name="next_to_the_left">Next to the left</string>
    <string name="left_arrow">Left arrow</string>
    <string name="hey_there_create_your_account">Hey there, create your account!</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm password</string>
    <string name="passwords_don_t_match">⚠️ Passwords don\'t match</string>
    <string name="password_length">Password must be at least 8 characters</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="this_account_doesn_t_exist_or_the_password_is_incorrect">This account doesn\'t exist or the password is incorrect.</string>
    <string name="create_your_new_tamagotchi">Create your new Tamagotchi!</string>
    <string name="tamagotchi_s_name">Tamagotchi\'s name</string>
    <string name="tamagotchi_s_house_name">Tamagotchi\'s house name</string>
    <string name="create_the_tamagotchi">Create the Tamagotchi!</string>
    <string name="login_not_undelined">Login</string>
    <string name="create_account_not_undelined">Create Account</string>
    <string name="permission_required">In order to fully enjoy the app, your permission to access to the device\'s data is required.</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="shower">shower</string>
    <string name="soap">soap</string>
    <string name="syrup_button">Syrup button</string>
    <string name="tea_button">Tea button</string>
    <string name="feed_your_tamagotchi">Feed your Tamagotchi</string>
    <string name="empty_house">Empty House</string>
    <string name="found_letter">Your Tamagotchi wrote a letter before it passed. Would you like to read it?</string>
    <string name="letter">letter</string>
    <string name="close_letter">Close Letter</string>
    <string name="close_popup">Close popup</string>
</resources>